Repair historical readers and codec sessions